fix main content overlapping with header

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,9 @@ header {
 main {
     margin: 0 auto;
     max-width: 800px;
-    padding: 0 10px;
+    padding-top: 30px;
+    padding-left: 10px;
+    padding-right: 10px;
     grid-area: main;
 }
 
